# Engine

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  mainProgram.cpp
appGLFW/: AddPanel.cpp  AddPanel.h  CMakeLists.txt  Camera.h  Cube.cpp  Cube.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Panel.cpp  Panel.h  ParentPanel.cpp  ParentPanel.h  Program.cpp  Program.h  RenderPanel.cpp  RenderPanel.h  ShaderEditorPanel.cpp  ShaderEditorPanel.h  mainProg.cpp
cmake_modules/: FindIMGUI.cmake
engine/: AssimpModel.cpp  AssimpModel.h  CMakeLists.txt  Camera.cpp  Camera.h  Context.cpp  Context.h  CopyStep.cpp  CopyStep.h  Cube.cpp  Cube.h  ForwardStep.cpp  ForwardStep.h  FrustumStep.cpp  FrustumStep.h  GeometryStep.cpp  GeometryStep.h  LightCube.cpp  LightCube.h  LightingStep.cpp  LightingStep.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Pipeline.cpp  Pipeline.h  Program.cpp  Program.h  SceneData.h  Step.cpp  Step.h  Texture.h  oglContext.cpp  oglContext.h
engine/Shaders/: default_fs.glsl  forward_fs.glsl  forward_vs.glsl  fragmentShaderSun.frag  frustum_fs.glsl  frustum_vs.glsl  geometryPass_fs.glsl  geometryPass_vs.glsl  lightBox_fs.glsl  lightingPass_fs.glsl  lightingPass_vs.glsl  vertexShaderSun.vert
imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
models/shiba/: shiba.mtl
